// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dependency-side-bar 1`] = `

<gui-dependency-sidebar-provider
  dependencies="GridItemData { simple-output },GridItemData { abbrev },GridItemData { @vltpkg/semver }"
  uninstalleddependencies
>
  <gui-grid-header classname="h-[48px]">
    Dependencies
  </gui-grid-header>
  <gui-side-item
    item="GridItemData { @vltpkg/semver }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { abbrev }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { simple-output }"
    dependencies="true"
  >
  </gui-side-item>
</gui-dependency-sidebar-provider>

`;

exports[`dependency-side-bar has both installed and uninstalled deps 1`] = `

<gui-dependency-sidebar-provider
  dependencies="GridItemData { simple-output },GridItemData { abbrev },GridItemData { @vltpkg/semver }"
  uninstalleddependencies="GridItemData { @ruyadorno/redact },GridItemData { ntl }"
>
  <gui-grid-header classname="h-[48px]">
    Dependencies
  </gui-grid-header>
  <gui-side-item
    item="GridItemData { @vltpkg/semver }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { abbrev }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { simple-output }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-grid-header>
    Uninstalled Dependencies
  </gui-grid-header>
  <gui-side-item
    item="GridItemData { @ruyadorno/redact }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { ntl }"
    dependencies="true"
  >
  </gui-side-item>
</gui-dependency-sidebar-provider>

`;

exports[`dependency-side-bar has uninstalled deps only 1`] = `

<gui-dependency-sidebar-provider
  dependencies
  uninstalleddependencies="GridItemData { @vltpkg/semver },GridItemData { abbrev },GridItemData { simple-output }"
>
  <gui-grid-header classname="h-[48px]">
    Dependencies
  </gui-grid-header>
  <gui-grid-header>
    Uninstalled Dependencies
  </gui-grid-header>
  <gui-side-item
    item="GridItemData { @vltpkg/semver }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { abbrev }"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="GridItemData { simple-output }"
    dependencies="true"
  >
  </gui-side-item>
</gui-dependency-sidebar-provider>

`;

exports[`dependency-side-bar no items 1`] = `

<gui-dependency-sidebar-provider
  dependencies
  uninstalleddependencies
>
  <gui-grid-header classname="h-[48px]">
    Dependencies
  </gui-grid-header>
</gui-dependency-sidebar-provider>

`;
